[package]
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
name = "reality_lights"
version = "0.1.0"

[dependencies]
actix = "0.7.4"
actix-web = "0.7.7"
bytes = "0.4.10"
failure = "0.1.2"
futures = "0.1.24"
image = "*"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.27"
time = "0.1.40"
tokio = "0.1.8"
tokio-codec = "0.1.0"
tokio-io = "0.1.8"
tokio-reactor = "0.1.5"
tokio-tcp = "0.1.1"
tokio-udp = "0.1.2"

[dependencies.artnet_protocol]
path = "libs/artnet_protocol"
