[package]
authors = ["Trangar <victor.koenders@gmail.com>"]
edition = "2018"
name = "floorplan"
version = "0.1.0"

[dependencies]
failure = "0.1"
serde_json = "1.0"
warp = "0.1"
reqwest = "0.9"
futures = "0.1"
parking_lot = "0.9"
enum-utils = "0.1"

[dependencies.serde]
features = ["derive"]
version = "1.0"
